Заверстать верхнюю часть страницы

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,46 @@
   <title>gymme</title>
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header__top">
+        <img src="images/icons/logo.svg" alt="" class="logo">
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#home" class="menu__link">Home</a>
+            </li>
+            <li class="menu__item">
+              <a href="#about" class="menu__link">About</a>
+            </li>
+            <li class="menu__item">
+              <a href="#workouts" class="menu__link">Workouts</a>
+            </li>
+            <li class="menu__item">
+              <a href="#pricing" class="menu__link">Pricing</a>
+            </li>
+            <li class="menu__item">
+              <a href="#community" class="menu__link">Community</a>
+            </li>
+            <li class="menu__item">
+              <a href="#faq" class="menu__link">FAQ</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__auth">
+          <a class="button button_log-in" href="#">Log in</a>
+          <a class="button button_sign-up" href="#">Sign up</a>
+        </div>
+      </div>
+
+      <div class="header__main">
+        <h1 class="header__title">
+          Get the best part of your day <br> <span class="header__title-highlight">– you fit here.</span>
+        </h1>
+        <p class="header__title-description">We provide serious fitness but within a fun and friendly, safe space.</p>
+        <a class="button button_header-main" href="#">Join now</a>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
