--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,19 @@
       </div>
     </div>
   </header>
+
+  <main>
+    <section class="mission-section">
+      <div class="mission-section__container">
+        <h2 class="section-title">Our mission</h2>
+        <p class="mission-section__description">
+          We are distinguished by our unsurpassed motivating atmosphere, knowledgeable staff, and premier exercise equipment, which supports our members in meeting their individual fitness goals.
+          <br><br>
+          The strength of our heart-felt identity is utilized to inspire every person that steps foot into our gyms to better themselves.
+        </p>
+        <a href="#" class="mission-section__join-button">Join now</a>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
