Мелкие правки по работе секции 'workouts'

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
       </div>
     </section>
 
-    <section class="workouts-session">
+    <section class="workouts-section">
       <div class="container">
         <h2 class="section-title section-title_workouts">Training programs</h2>
         <ul class="image-gallery" id="image-gallery">
