Заверстать секцию 'community'

--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,45 @@
         </div>
       </div>
     </section>
+
+    <section class="community-section">
+      <div class="container">
+        <h2 class="section-title section-title_community">Community</h2>
+
+        <ul class="image-gallery" id="testimonial-gallery">
+          <li class="image-gallery__item">
+            <div class="image-gallery__testimonial-card">
+              <img src="images/testimonial_card_1.jpg" alt="" class="image-gallery__testimonial-card-img">
+              <q class="image-gallery__testimonial-card-quote">Great location, great price and great, helpful people. What to want more?</q>
+              <span class="image-gallery__testimonial-card-author">Mark A.</span>
+            </div>
+          </li>
+          <li class="image-gallery__item">
+            <div class="image-gallery__testimonial-card">
+              <img src="images/testimonial_card_2.jpg" alt="" class="image-gallery__testimonial-card-img">
+              <q class="image-gallery__testimonial-card-quote">Gymme changed my life. Not only physically but mentally as well. I'm a better mother, and all around better human being because of this gym.</q>
+              <span class="image-gallery__testimonial-card-author">Lauren K.</span>
+            </div>
+          </li>
+          <li class="image-gallery__item">
+            <div class="image-gallery__testimonial-card">
+              <img src="images/testimonial_card_3.jpg" alt="" class="image-gallery__testimonial-card-img">
+              <q class="image-gallery__testimonial-card-quote">Love these workouts! Trainers are knowledgeable and motivating. Gymme is wonderful!</q>
+              <span class="image-gallery__testimonial-card-author">John D.</span>
+            </div>
+          </li>
+        </ul>
+
+        <div class="control-buttons community-section__control-buttons">
+          <button class="control-buttons__left"  id="testimonial-gallery-left-control">
+            <img src="images/icons/circle_chevron.svg" alt="" class="control-buttons__left-img">
+          </button>
+          <button class="control-buttons__right" id="testimonial-gallery-right-control">
+            <img src="images/icons/circle_chevron.svg" alt="" class="control-buttons__right-img">
+          </button>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src="./js/script.js"></script>
