Заверстать секцию 'FAQ'

--- a/src/index.html
+++ b/src/index.html
@@ -207,6 +207,87 @@
         </div>
       </div>
     </section>
+
+    <section class="faq-section">
+      <div class="container">
+        <h2 class="section-title section-title_faq">FAQ</h2>
+
+        <ul class="faq-section__list">
+          <li class="faq-section__item">
+            <div class="collapsible-item">
+              <button class="collapsible-item__button">
+                How can I book a workout class?
+              </button>
+              <p class="collapsible-item__content">
+                Booking a workout classe is simple for our members. Simply log into your Gymme account on our website and click "book class" button. You can book 3 days in advance at 9pm.
+                <br><br>
+                You can cancel your class online by logging back in and click "cancel booking".
+              </p>
+            </div>
+          </li>
+          <li class="faq-section__item">
+            <div class="collapsible-item">
+              <button class="collapsible-item__button">
+                Can I pay by cash for my membership?
+              </button>
+              <p class="collapsible-item__content">
+                Booking a workout classe is simple for our members. Simply log into your Gymme account on our website and click "book class" button. You can book 3 days in advance at 9pm.
+                <br><br>
+                You can cancel your class online by logging back in and click "cancel booking".
+              </p>
+            </div>
+          </li>
+          <li class="faq-section__item">
+            <div class="collapsible-item">
+              <button class="collapsible-item__button">
+                What age do I need to be to join?
+              </button>
+              <p class="collapsible-item__content">
+                Booking a workout classe is simple for our members. Simply log into your Gymme account on our website and click "book class" button. You can book 3 days in advance at 9pm.
+                <br><br>
+                You can cancel your class online by logging back in and click "cancel booking".
+              </p>
+            </div>
+          </li>
+          <li class="faq-section__item">
+            <div class="collapsible-item">
+              <button class="collapsible-item__button">
+                Are there any lockers?
+              </button>
+              <p class="collapsible-item__content">
+                Booking a workout classe is simple for our members. Simply log into your Gymme account on our website and click "book class" button. You can book 3 days in advance at 9pm.
+                <br><br>
+                You can cancel your class online by logging back in and click "cancel booking".
+              </p>
+            </div>
+          </li>
+          <li class="faq-section__item">
+            <div class="collapsible-item">
+              <button class="collapsible-item__button">
+                How do I cancel my membership?
+              </button>
+              <p class="collapsible-item__content">
+                Booking a workout classe is simple for our members. Simply log into your Gymme account on our website and click "book class" button. You can book 3 days in advance at 9pm.
+                <br><br>
+                You can cancel your class online by logging back in and click "cancel booking".
+              </p>
+            </div>
+          </li>
+          <li class="faq-section__item">
+            <div class="collapsible-item">
+              <button class="collapsible-item__button">
+                Is there water available at the gym?
+              </button>
+              <p class="collapsible-item__content">
+                Booking a workout classe is simple for our members. Simply log into your Gymme account on our website and click "book class" button. You can book 3 days in advance at 9pm.
+                <br><br>
+                You can cancel your class online by logging back in and click "cancel booking".
+              </p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <script src="./js/script.js"></script>
