Заверстать нижнюю часть страницы

--- a/src/index.html
+++ b/src/index.html
@@ -290,6 +290,22 @@
     </section>
   </main>
 
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__main">
+        <h1 class="footer__title">
+          Wanna join <span class="footer__title-highlight">&</span> <br> have fun?
+        </h1>
+        <p class="footer__title-description">We’ll keep you updated on the things you need to know about Gymme. Nothing more, nothing less.</p>
+        <a class="button" href="#">Join now</a>
+      </div>
+      <div class="footer__bottom">
+        <img src="images/icons/logo.svg" alt="" class="logo">
+        <span class="footer__bottom-copyright">All rights reserved. Gymme 2021.</span>
+      </div>
+    </div>
+  </footer>
+
   <script src="./js/script.js"></script>
 </body>
 </html>
