Добавить (сделать работающими) относительные ссылки на секции сайта

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <title>gymme</title>
 </head>
 <body>
-  <header class="header">
+  <header class="header" id="home">
     <div class="container">
       <div class="header__top">
         <img src="images/icons/logo.svg" alt="" class="logo">
@@ -55,7 +55,7 @@
   </header>
 
   <main>
-    <section class="mission-section">
+    <section class="mission-section" id="about">
       <div class="mission-section__container">
         <h2 class="section-title">Our mission</h2>
         <p class="mission-section__description">
@@ -67,7 +67,7 @@
       </div>
     </section>
 
-    <section class="workouts-section">
+    <section class="workouts-section" id="workouts">
       <div class="container">
         <h2 class="section-title section-title_workouts">Training programs</h2>
         <ul class="image-gallery" id="image-gallery">
@@ -114,7 +114,7 @@
       </div>
     </section>
 
-    <section class="pricing-section">
+    <section class="pricing-section" id="pricing">
       <div class="container">
         <h2 class="section-title section-title_pricing">Pricing plan</h2>
 
@@ -169,7 +169,7 @@
       </div>
     </section>
 
-    <section class="community-section">
+    <section class="community-section" id="community">
       <div class="container">
         <h2 class="section-title section-title_community">Community</h2>
 
@@ -208,7 +208,7 @@
       </div>
     </section>
 
-    <section class="faq-section">
+    <section class="faq-section" id="faq">
       <div class="container">
         <h2 class="section-title section-title_faq">FAQ</h2>
 
