Сделать первую версию адаптива к ширине.

--- a/src/index.html
+++ b/src/index.html
@@ -121,50 +121,61 @@
         <div class="pricing-section__price-cards">
 
           <div class="price-card">
-            <span class="price-card__name">Basic</span>
-            <div class="price-card__price">
-              <span class="price-card__price-value">20</span>
-              <span class="price-card__price-period">/month</span>
+            <div class="wrapper">
+              <span class="price-card__name">Basic</span>
+              <div class="price-card__price">
+                <span class="price-card__price-value">20</span>
+                <span class="price-card__price-period">/month</span>
+              </div>
             </div>
-            <ul class="price-card__features">
-              <li class="price-card__feature">unlimited gym access</li>
-              <li class="price-card__feature">1 training programs</li>
-              <li class="price-card__feature">free fitness consultation</li>
-            </ul>
-            <a href="#" class="button button_pricing_light">Join now</a>
+            <div class="wrapper">
+              <ul class="price-card__features">
+                <li class="price-card__feature">unlimited gym access</li>
+                <li class="price-card__feature">1 training programs</li>
+                <li class="price-card__feature">free fitness consultation</li>
+              </ul>
+              <a href="#" class="button button_pricing_light">Join now</a>
+            </div>
           </div>
 
           <div class="price-card price-card_dark">
-            <span class="price-card__name">Premium</span>
-            <div class="price-card__price">
-              <span class="price-card__price-value">35</span>
-              <span class="price-card__price-period">/month</span>
+            <div class="wrapper">
+              <span class="price-card__name">Premium</span>
+              <div class="price-card__price">
+                <span class="price-card__price-value">35</span>
+                <span class="price-card__price-period">/month</span>
+              </div>
             </div>
-            <ul class="price-card__features">
-              <li class="price-card__feature">unlimited gym access</li>
-              <li class="price-card__feature">5 training programs</li>
-              <li class="price-card__feature">free fitness consultation</li>
-              <li class="price-card__feature">personal trainer</li>
-            </ul>
-            <a href="#" class="button">Join now</a>
+            <div class="wrapper">
+              <ul class="price-card__features">
+                <li class="price-card__feature">unlimited gym access</li>
+                <li class="price-card__feature">5 training programs</li>
+                <li class="price-card__feature">free fitness consultation</li>
+                <li class="price-card__feature">personal trainer</li>
+              </ul>
+              <a href="#" class="button">Join now</a>
+            </div>
           </div>
 
           <div class="price-card price-card_long">
-            <span class="price-card__name">Elite</span>
-            <div class="price-card__price">
-              <span class="price-card__price-value">49</span>
-              <span class="price-card__price-period">/month</span>
+            <div class="wrapper">
+              <span class="price-card__name">Elite</span>
+              <div class="price-card__price">
+                <span class="price-card__price-value">49</span>
+                <span class="price-card__price-period">/month</span>
+              </div>
             </div>
-            <ul class="price-card__features">
-              <li class="price-card__feature">unlimited gym access</li>
-              <li class="price-card__feature">all training programs</li>
-              <li class="price-card__feature">free fitness consultation</li>
-              <li class="price-card__feature">personal trainer</li>
-              <li class="price-card__feature">50% off drinks</li>
-            </ul>
-            <a href="#" class="button button_pricing_light">Join now</a>
-          </div>
-
+            <div class="wrapper">
+              <ul class="price-card__features">
+                <li class="price-card__feature">unlimited gym access</li>
+                <li class="price-card__feature">all training programs</li>
+                <li class="price-card__feature">free fitness consultation</li>
+                <li class="price-card__feature">personal trainer</li>
+                <li class="price-card__feature">50% off drinks</li>
+              </ul>
+              <a href="#" class="button button_pricing_light">Join now</a>
+            </div>
+            </div>
         </div>
       </div>
     </section>
